--- a/plugins/org.eclipse.papyrus.information.modeling.core/resource/style/information_model.css
+++ b/plugins/org.eclipse.papyrus.information.modeling.core/resource/style/information_model.css
@@ -1,25 +1,30 @@
 @charset "UTF-8";
 
-Property{
+Property {
 	fillColor: #C3D1D5;
 	transparency: 0;
 	gradient: #FFFFFF vertical;
 	lineColor: #000000;
 	elementIcon: true}
 
-Operation{
+Operation {
 	fillColor: #C3D1D5;
 	transparency: 0;
 	gradient: #FFFFFF vertical;
 	lineColor: #000000}
 
-Class{
-	fontName: "Segoe UI";
-	fillColor: #FFAAFF;
+Class {
+	fillColor: #F8FFFF;
+	gradient: none;
 	transparency: 0;
-	gradient: #FFFFFF vertical;
-	lineColor: #000000;
-	elementIcon: false;
+	lineColor: #10C4AD;
+	lineWidth: 1px;
+	elementIcon: true;
+	shadow: true;
+	shadowWidth: 0px;
+	shadowColor: black;
+	radiusWidth: 0px;
+	radiusHeight: 0px;
 }
 
 Class > Compartment {
@@ -28,12 +33,12 @@ Class > Compartment {
 
 Class > Compartment[kind="attributes"] {
     visible:true;
-    showTitle:true;
+    showTitle:false;
 }
 
 Class > Compartment[kind="operations"] {
-    visible:true;
-    showTitle:true;
+    visible:false;
+    showTitle:false;
     elementIcon: false;
 }
 
@@ -41,7 +46,7 @@ Package {
 	fontName: "Segoe UI";
 	fillColor: #B7C4E6;
 	transparency: 0;
-	gradient: #FFFFFF vertical;
+	gradient: none;
 	lineColor: #000000;
 	elementIcon: true;
 }
