Bug 495386 - [InformationModeling] Add welcome page content
- Add branding image to Welcome page
- Welcome page shows Overview, Tutorials and Samples
- Overview: Links to Papyrus Help for overview and UML profiles
- Tutorials: Getting started: Explain views, create project, model
- Samples: Import ProjectManagement example
- Add action to call wizards from welcome page

Change-Id: I9454e342d24edbd0806f8eafda4883f93f5d52ff
Signed-off-by: Martin Fleck <mfleck@eclipsesource.com>

--- a/plugins/org.eclipse.papyrus.information.modeling.intro/extensions/css/overview.css
+++ b/plugins/org.eclipse.papyrus.information.modeling.intro/extensions/css/overview.css
@@ -1,7 +1,11 @@
-a#im-new-project img { 
-	background-image : url(../../images/topiclabel/papyrus.png);
+a#im-help-class-diagrams img,
+a#im-help-papyrus img,
+a#im-help-profiles img { 
+	background-image : url(../../images/papyrus.png);
 }
 
-a#im-new-project:hover img { 
+a#im-help-class-diagrams:hover img,
+a#im-help-papyrus:hover img,
+a#im-help-profiles:hover img { 
 	background-image : url(../../images/papyrus_hover.png);
 }
